--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,6 +18,9 @@
   "action": {
     "default_popup": "popup.html"
   },
+  "chrome_url_overrides": {
+    "newtab": "app.tsx"
+  },
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
